--- a/desig_mode/desig_mode_strategy/pom.xml
+++ b/desig_mode/desig_mode_strategy/pom.xml
@@ -9,15 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>desig_mode_delegate</artifactId>
+    <artifactId>desig_mode_strategy</artifactId>
 
-    <dependencies>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
-        </dependency>
-
-    </dependencies>
 
 </project>
