--- a/desig_mode/pom.xml
+++ b/desig_mode/pom.xml
@@ -14,6 +14,9 @@
         <module>desig_mode_prototype</module>
         <module>desig_mode_proxy</module>
         <module>desig_mode_delegate</module>
+        <module>desig_mode_strategy</module>
+        <module>desig_mode_decorator</module>
+        <module>desig_mode_delegate_web</module>
     </modules>
 
 
