--- a/desig_mode/desig_mode_delegate_web/pom.xml
+++ b/desig_mode/desig_mode_delegate_web/pom.xml
@@ -20,23 +20,41 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-maven-plugin -->
+
+
     </dependencies>
     <build>
         <plugins>
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
-                <artifactId>maven-jetty-plugin</artifactId>
-                <version>6.1.7</version>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>8.1.16.v20140903</version>
                 <configuration>
+
+                    <scanIntervalSeconds>10</scanIntervalSeconds>
+                    <webApp>
+                        <contextPath>/</contextPath>
+                    </webApp>
                     <connectors>
-                        <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+                        <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
                             <port>8888</port>
-                            <maxIdleTime>30000</maxIdleTime>
                         </connector>
                     </connectors>
-                    <webAppSourceDirectory>${project.build.directory}/${pom.artifactId}-${pom.version}
-                    </webAppSourceDirectory>
-                    <contextPath>/</contextPath>
+
+
+                    <!--<connectors>-->
+                        <!--<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">-->
+                            <!--<port>8888</port>-->
+                            <!--<maxIdleTime>30000</maxIdleTime>-->
+                        <!--</connector>-->
+                    <!--</connectors>-->
+                    <!--<webAppSourceDirectory>${project.build.directory}/${pom.artifactId}-${pom.version}-->
+                    <!--</webAppSourceDirectory>-->
+                    <!--<contextPath>/</contextPath>-->
+                    <!--<httpConnector>-->
+                        <!--<port>8888</port>-->
+                    <!--</httpConnector>-->
                 </configuration>
             </plugin>
         </plugins>
